--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <header>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="\#">Главная страница</a>
-        <a class="navbar-brand" href="\news">Новости</a>
+        #<a class="navbar-brand" href="\news">Новости</a>
         <a class="navbar-brand" href="\first_page">Картинка</a>
         <a class="navbar-brand" href="\form_sample">Регистрация</a>
        
